attempt at fixing the download icon on safari

--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ header {
 .download-button {
   display: flex;
   gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
 
   padding: 0.5rem 2rem;
 
